fixed issued with alignment of text

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,15 @@
+.img {
+    display: block;
+    margin: 0 auto;
+}
 body {
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 .header {
     height: 100vh;
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
     background-size: cover;
     background-position: center;
     display: flex;
@@ -11,7 +17,7 @@ body {
     align-items: center;
     font-family: sans-serif;
 }
-h1 {
+.h3 {
     margin-bottom: 70px;
     font-size: 45px;
     letter-spacing: 2px;
